[workspace]
resolver = "2"
members = ["common", "dialler", "receiver"]

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
lto = 'fat'       # Enable more aggressive link-time optimization
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Abort on panic
strip = 'symbols' # Strip debuginfo and symbols from binary
