[workspace]
resolver = "3"
members = ["common", "dialler", "receiver"]

[workspace.package]
version = "0.1.8"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
aes = { version = "0.8" }
anyhow = { version = "1.0" }
axum = { version = "0.8" }
cbc = { version = "0.1", features = ["block-padding", "alloc"] }
clap = { version = "4.5", features = ["derive"] }
crc = { version = "3.3" }
hex = { version = "0.4" }
log = { version = "0.4" }
nom = { version = "8.0" }
prometheus = { version = "0.14" }
rand = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "rt", "time"] }
tokio-util = { version = "0.7" }
tracing-appender = { version = "0.2" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "time",
    "env-filter",
] }

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
lto = 'fat'       # Enable more aggressive link-time optimization
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Abort on panic
strip = 'symbols' # Strip debuginfo and symbols from binary
