[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
crc = { version = "3.2" }
home = { version = "0.5" }
log = { version = "0.4" }
nom = { version = "8.0" }
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
tracing = { version = "0.1" }
tracing-appender = { version = "0.2" }
tracing-error = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = [
    "std",
    "fmt",
    "time",
    "env-filter",
] }
