[package]
name = "dialler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
log = { version = "0.4" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "time", "io-util", "macros"] }
tokio-util = { version = "0.7" }
