[package]
name = "dialler"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
