[package]
name = "receiver"
version = "0.1.3"
edition = "2024"

[dependencies]
anyhow = { version = "1.0" }
clap = { version = "4.5", features = ["derive"] }
common = { path = "../common" }
log = { version = "0.4" }
thiserror = { version = "2.0" }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "rt", "time"] }
tokio-util = { version = "0.7" }
