[package]
name = "receiver"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
